# Aegis-ATV

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTEGRATION_PLAN.md  LAUNCH.md  NOTICE  PLAN.md  PLAN_v2.md  PLAN_v3.md  PRICING.md  README.md  ROADMAP.md  SECURITY.md  SESSION_HANDOFF.md  SETUP_MACMINI.md  SHOW_HN.md  TWITTER_THREAD.md  WHITEPAPER.md  docker-compose.yml  pyproject.toml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  detection_rule.yml  feature_request.yml
.github/workflows/: ci.yml  openclaw-plugin.yml  quickstart-smoke.yml  release-aegis-mvp-shim.yml  release-docker.yml  release-pypi.yml
Formula/: aegis.rb
aegis-mvp-shim/: README.md  pyproject.toml
aegis-mvp-shim/aegis_mvp/: __init__.py
data/: audit.sqlite-shm  audit.sqlite-wal
data/dogfood/: claude-code-f9917882.jsonl  observations.jsonl  rerun.jsonl
demo/: README_coding_agent_token_waste.md  README_multi_agent_token.md  action_steps_50_validation.py  advisor_demo.py  agent_demo.py  atv_serializer_demo.py  atv_temporal_demo.py  cache_lint_demo.py  cache_lint_loop_demo.py  coding_agent_token_waste.py  context_advisor.py  critical_moments_demo.py  domain_validation.py  eviction_advisor_demo.py  hw_double_check.py  inefficiency_demo.py  judge_stack.py  kv_cache_advisor.py  macmini_value_test.md  module_verification.py  multi_agent_token_demo.py  on_off_comparison.py  performance_dashboard_demo.py  placement_advisor_llamacpp.py  plugin_scenarios.py  rag_comparison.py  record.sh  run_scenario.sh  runtime_closed_loop.py  three_tier_validation.py  tools.py  wiki_grounded_advisor.py
demo/macmini/: __init__.py  __main__.py  case.py  cost.py  fixtures.py  performance.py  rag.py  render.py  runner.py  security.py
demo/recording/: README.md  capture_screens.sh  demo.cast  draw_quickstart_gif.py  narration-60s.m4a  narration-60s.txt  narration-90s.m4a  narration-90s.txt
demo/scenarios/: README.md  _ham.py  _lib.sh  _payload.py  run_all.sh  scenario_a_db_drop.sh  scenario_b_cost_spike.sh  scenario_c_prompt_injection.sh  scenario_d_supply_chain.sh  scenario_e_insider_drift.sh  scenario_f_ham_tamper.sh  scenario_g_multi_agent.sh
demo/sllm_rag_eval/: __init__.py  __main__.py  cases.py  render.py  runner.py
docs/: ACTION_STEPS_50_REPORT.md  ADVISOR_DEMO_REPORT.md  ARCHITECTURE.md  ATV_ARCHITECTURE.md  AUDIT_ROTATION.md  CLAUDE_CODE_INSTALL.md  DECK_A_CONTINUOUS_COMPLIANCE.md  DECK_B_AGENT_TRANSACTION_SAFETY.md  DECK_C_REGULATED_AI_OPERATING_MODEL.md  DECK_INDEX.md  DEMO.md  DESIGN_PARTNER_PLAYBOOK.md  DESIGN_PARTNER_PROGRAM.md  DOGFOOD.md  DOGFOOD_PHASE_B.md  DOMAIN_VALIDATION_REPORT.md  INFERENCE_REGISTRY.md  LICENSE_KEY.md  M13_TRAINING.md  MACMINI_USER_TEST.md  MACMINI_VALIDATION_REPORT.md  MANUAL_MACMINI.md  MANUAL_macmini_validation.md  MANUAL_v0.1.0_ko.md  MANUAL_v2.2.md  MANUAL_v2.5_advisor.md  ON_OFF_COMPARISON_REPORT.md  OPERATIONS.md  PATENT_SUPPLEMENT_v3.md  PERSONAL_QUICKSTART.md  PHI_3_5_UPGRADE.md  PLUGIN_CHECKUP.md  PYPI_AEGIS_MVP_DEPRECATION.md  QUICKSTART.md  RAG_SLLM_BENCHMARK_REPORT.md  RECORDING_KIT.md  RELEASE_PIPELINE.md  REPORT_EXPLAIN.md  RUNBOOK.md  SESSION_DRIFT.md  (+13 more)
docs/demos/: screencast-v0.1.0.md
docs/diagrams/: README.md  draw_atv_2080_v1.py
docs/exports/: README.md  USER_GUIDE.ko.docx  USER_GUIDE.ko.pptx
docs/integrations/: hermes.md  openclaw.md  openrouter.md  paperclip.md  serena.md
docs/launch/: FAQ.md  PUBLISH_OPENCLAW_PLUGIN.md  README.md  RELEASE_v0.2.0.md  SHOW_HN.md  blog_post.md
docs/manuals/: COACH_MANUAL.ko.md  DOCTOR_MANUAL.ko.md  LIVE_MANUAL.ko.md  README.md
docs/releases/: CLAUDE_CODE.ko.md  OPENCLAW_CLOUD.ko.md  OPENCLAW_LOCAL.ko.md  README.md
integrations/: __init__.py
integrations/llama_cpp/: __init__.py
integrations/mlx_lm/: __init__.py
integrations/vllm/: __init__.py
keys/: journal_data.key
models/: action_embeddings_v1.json  advisor_calibration_v1.json  burnin_baseline_v1.json  case_memory_v1.npz  intent_classifier_v1.json  m13_attribution_head_v1.json  m13_attribution_head_v2.json  trajectory_catalog_v1.json
openclaw-plugin/: CHANGELOG.md  README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
openclaw-plugin/src/: aegis-client.ts  handler.ts  index.ts  types.ts
openclaw-plugin/tests/: aegis-client.test.ts  handler.test.ts  index.test.ts
pkg/brew/: README.md
policies/: aid_region.json  default.json  reversibility.json  safe_actions.json  safe_bash_subcommands.json  sensitive_paths.json
policies/rag_corpus/: README.md  baselines.jsonl  playbooks.jsonl  rules.jsonl
scripts/: build_user_guide_pptx.py  dogfood_check.sh  install.sh  macmini_user_test.sh  quickstart_smoke.sh
src/aegis/: __init__.py  config.py  main.py  schema.py
tests/: conftest.py
tests/integration/: test_action_advice.py  test_action_embeddings.py  test_action_steps_matrix.py  test_admin_aid.py  test_advisor.py  test_advisor_calibration.py  test_advisor_demo.py  test_advisor_retrospective.py  test_advisor_signals.py  test_atmu_e2e.py  test_attestation_e2e.py  test_atv_serializer.py  test_atv_temporal.py  test_audit_chain.py  test_audit_signing.py  test_autonomy_wiring.py  test_budget_store.py  test_burnin_anomaly.py  test_burnin_e2e.py  test_cache_lint.py  test_cache_lint_loop.py  test_calibration_feedback.py  test_cost_e2e.py  test_cost_experiments.py  test_donor_incidents_e2e.py  test_eviction_advisor.py  test_firewall_e2e.py  test_fleet_monitor.py  test_ham_e2e.py  test_intent_classifier.py  test_model_attestation.py  test_multi_agent_cost.py  test_ntfy_and_file_notifiers.py  test_performance_dashboard.py  test_plugin_e2e.py  test_post_analysis.py  test_precompact_and_user_prompt.py  test_real_bge_e2e.py  test_real_sllm_e2e.py  test_replay_e2e.py  (+7 more)
tests/unit/: _firewall_helpers.py  test_aegis_cli.py  (+118 more)
tools/: README.md  aegis_cli.py  aegis_hook.py  aegis_local_hook.py  aegis_payload.py  aegis_safety.py  install_hook.py  setup_macmini.sh  test_hook.sh
(+272 files in other folders)
