[project]
name = "aegis-mvp"
version = "0.3.0"
description = "Aegis ATV — Action Firewall + cryptographic audit chain for Claude Code (and OpenClaw, preview)"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
authors = [
    { name = "Chan Ik Park", email = "noreply@github.com" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Development Status :: 4 - Beta",
]
keywords = ["claude-code", "agent", "firewall", "security", "audit", "atv"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.25",
    "openai>=1.14",
    "cryptography>=42.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "orjson>=3.9",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Solo Free real-sLLM: on-device quantized LLM judge via llama.cpp.
# Activate with: `uv pip install aegis-mvp[local-llm]` (or
# equivalently `uv sync --extra local-llm`).
# Apple Silicon (Metal): set CMAKE_ARGS="-DGGML_METAL=on" before install.
local-llm = [
    "llama-cpp-python>=0.2.85",
    "huggingface-hub>=0.20",   # for `Llama.from_pretrained` / model download in demos
]

[project.scripts]
aegis = "tools.aegis_cli:main"

[project.urls]
Homepage      = "https://github.com/happyikas/Aegis-ATV"
Repository    = "https://github.com/happyikas/Aegis-ATV"
Issues        = "https://github.com/happyikas/Aegis-ATV/issues"
Changelog     = "https://github.com/happyikas/Aegis-ATV/blob/main/CHANGELOG.md"
Documentation = "https://github.com/happyikas/Aegis-ATV#documentation"
Roadmap       = "https://github.com/happyikas/Aegis-ATV/blob/main/ROADMAP.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis", "tools"]

[tool.hatch.build.targets.sdist]
# Slim sdist: keep source + policies + minimal docs, drop the
# pre-rendered media kit (PDFs, GIFs, audio, screenshots) and the
# large .npz baseline. Users who want those clone the GitHub repo;
# `pip install aegis-mvp` should be fast and ~1 MB, not 17 MB.
include = [
    "/src",
    "/tools",
    "/policies",
    "/scripts",
    "/Dockerfile",
    "/docker-compose.yml",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
    "/CHANGELOG.md",
    "/PRICING.md",
    "/ROADMAP.md",
    "/SECURITY.md",
    "/.env.example",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "demo"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Math/ML code uses standard capital-letter conventions for matrices
# (X, X_tr, XtWX) — N803/N806 disagree with the convention. Restrict
# the relaxation to the modules that need it so the rest of the
# codebase keeps the snake_case discipline.
"src/aegis/burnin/m13_train.py" = ["N803", "N806"]
"tests/unit/test_burnin_m13.py" = ["N803", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["aegis"]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
