[project]
name = "aegis-mvp"
version = "0.4.1"
description = "DEPRECATED — renamed to aegis-atv. Install with `pip install aegis-atv`. See https://github.com/happyikas/Aegis-ATV"
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Chan Ik Park", email = "noreply@github.com" },
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security",
]
keywords = ["deprecated", "aegis-atv", "renamed"]
requires-python = ">=3.9"
# No deps — the redirect shim is intentionally trivial. Anyone
# pinning aegis-mvp==0.4.1 gets an ImportError the moment they
# `import aegis_mvp`, telling them to switch to `aegis-atv`.
dependencies = []

[project.urls]
Homepage      = "https://github.com/happyikas/Aegis-ATV"
Repository    = "https://github.com/happyikas/Aegis-ATV"
"New package" = "https://pypi.org/project/aegis-atv/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegis_mvp"]
